First pas at adding Approaches UI

--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -24,3 +24,22 @@ file.filterdescription=Syllable Parser files
 dialog.chooseinterfacelanguage=Choose Interface Language
 dialog.chooselanguage=Choose language:
  
+#Approaches
+approach.cv=CV Pattern
+apporach.sonorityhierarchy=Sonority Hierarchy
+approach.onc=Onset-Nucleus-Coda
+approach.moraic=Moraic
+approach.nuclearprojection=Nuclear Projection
+approach.ot=Optimality Theory
+ 
+#Views within approaches
+cv.view.segmentinventory=Segment Inventory
+cv.view.naturalclass=Natural Classes
+cv.view.cvsyllablepatterns=CV Syllable Patterns
+cv.view.cvexceptionlist=CV Exceptions List
+cv.view.words=Words
+ 
+ # Micellaneous
+ misc.niyheader=Sorry
+ misc.niycontent=Not implemented yet.
+ 
