--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -23,3 +23,23 @@ file.filterdescription=Archivos de Syllable Parser
 #Choose Interface Language dialog
 dialog.chooseinterfacelanguage=Selecionar el lengua del interfaz
 dialog.chooselanguage=Selecionar lengua:
+ 
+#Approaches
+approach.cv=CV Pattern
+apporach.sonorityhierarchy=Sonority Hierarchy
+approach.onc=Onset-Nucleus-Coda
+approach.moraic=Moraic
+approach.nuclearprojection=Nuclear Projection
+approach.ot=Optimality Theory
+
+#Views within approaches
+cv.view.segmentinventory=Segment Inventory
+cv.view.naturalclass=Natural Classes
+cv.view.cvsyllablepatterns=CV Syllable Patterns
+cv.view.cvexceptionlist=CV Exceptions List
+cv.view.words=Words
+
+ # Micellaneous
+ misc.niyheader=Lo sienti
+ misc.niycontent=No todavía implementado.
+  
