After first shot at filling approach view content pane

--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -33,13 +33,23 @@ approach.nuclearprojection=Nuclear Projection
 approach.ot=Optimality Theory
  
 #Views within approaches
-cv.view.segmentinventory=Segment Inventory
-cv.view.naturalclass=Natural Classes
-cv.view.cvsyllablepatterns=CV Syllable Patterns
-cv.view.cvexceptionlist=CV Exceptions List
-cv.view.words=Words
+cv.view.segmentinventory=CV Segment Inventory
+cv.view.naturalclass=CV Natural Classes
+cv.view.syllablepatterns=CV Syllable Patterns
+cv.view.exceptionlist=CV Exceptions List
+cv.view.words=CV Words
  
- # Micellaneous
- misc.niyheader=Sorry
- misc.niycontent=Not implemented yet.
- 
+onc.view.segmentinventory=ONC Segment Inventory
+onc.view.syllablepatterns=ONC Syllable Patterns
+onc.view.exceptionlist=ONC Exceptions List
+onc.view.words=ONC Words
+
+# labels
+label.segmentinventory=Segment Inventory
+label.segment=Segment
+label.orthographicforms=Graphemes
+label.comment=Comment
+
+# Micellaneous
+misc.niyheader=Sorry
+misc.niycontent=Not implemented yet.
