--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -33,13 +33,24 @@ approach.nuclearprojection=Nuclear Projection
 approach.ot=Optimality Theory
 
 #Views within approaches
-cv.view.segmentinventory=Segment Inventory
-cv.view.naturalclass=Natural Classes
-cv.view.cvsyllablepatterns=CV Syllable Patterns
-cv.view.cvexceptionlist=CV Exceptions List
-cv.view.words=Words
+cv.view.segmentinventory=CV Segment Inventory
+cv.view.naturalclass=CV Natural Classes
+cv.view.syllablepatterns=CV Syllable Patterns
+cv.view.exceptionlist=CV Exceptions List
+cv.view.words=CV Words
+ 
+onc.view.segmentinventory=ONC Segment Inventory
+onc.view.syllablepatterns=ONC Syllable Patterns
+onc.view.exceptionlist=ONC Exceptions List
+onc.view.words=ONC Words
 
- # Micellaneous
- misc.niyheader=Lo sienti
- misc.niycontent=No todavía implementado.
+#labels
+label.segmentinventory=Inventorio de segementos
+label.segment=Grafemas
+label.orthographicforms=Formas ortografías
+label.comment=Notas
+
+# Micellaneous
+misc.niyheader=Lo siento
+misc.niycontent=Todavía no implementado.
   
