First baby steps at splitting out data and adding a backend provider.

--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -8,6 +8,8 @@ menu.saveas=Save As...
 menu.exit=Exit
 menu.edit=Edit
 menu.remove=Remove
+menu.insert=Insert
+menu.insertnew=New item
 menu.view=View
 menu.changeinterfacelanguage=Change the interface language
 menu.help=Help
