--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -8,6 +8,8 @@ menu.saveas=Guardar Como...
 menu.exit=Quitar
 menu.edit=Editar
 menu.remove=Remover
+menu.insert=Insertar
+menu.insertnew=Nueva ítem
 menu.view=Vista
 menu.changeinterfacelanguage=Cambiar lengua del Interfaz
 menu.help=Ayuda
