localize load/save file error messages; fix missing XML* doc items.

--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -52,6 +52,13 @@ label.segment=Segment
 label.orthographicforms=Graphemes
 label.comment=Comment
 
+# file loading/saving
+file.error=Error
+file.error.load.header=Could not load data
+file.error.load.content=Could not load data from file:\n
+file.error.save.header=Could not save data
+file.error.save.content=Could not save data to file:\n
+
 # Micellaneous
 misc.niyheader=Sorry
 misc.niycontent=Not implemented yet.
