--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -52,6 +52,13 @@ label.segment=Grafemas
 label.orthographicforms=Formas ortografías
 label.comment=Notas
 
+# file loading/saving
+file.error=Error
+file.error.load.header=No se puede obtenir data
+file.error.load.content=No se puede obtenir data del archivo:\n
+file.error.save.header=No se puede guardar data
+file.error.save.content=No se puede guardar data al archivo:\n
+
 # Micellaneous
 misc.niyheader=Lo siento
 misc.niycontent=Todavía no implementado.
