After first pass at fist chooser

--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -50,7 +50,15 @@ onc.view.words=ONC Words
 label.segmentinventory=Segment Inventory
 label.segment=Segment
 label.orthographicforms=Graphemes
-label.comment=Comment
+label.description=Description
+label.naturalclasses=Natural Classes
+label.segmentornaturalclass=Segment or Natural Class
+label.name=Name
+label.cancel=Cancel
+label.help=Help
+label.ok=OK
+label.segmentsandnaturalclasses=Seg. or NC
+label.choosesnc=Choose one or more segments and/or natural classes
 
 # file loading/saving
 file.error=Error
