--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -9,7 +9,7 @@ menu.exit=Quitar
 menu.edit=Editar
 menu.remove=Remover
 menu.insert=Insertar
-menu.insertnew=Nueva ítem
+menu.insertnew=Nueva Ã­tem
 menu.view=Vista
 menu.changeinterfacelanguage=Cambiar lengua del Interfaz
 menu.help=Ayuda
@@ -17,7 +17,7 @@ menu.about=A cerca
 
 # About dialog
 about.header=EL programa Syllable Parser
-about.content=Un programa lingüístico para investigar sylabificación\n© 2015 SIL International
+about.content=Un programa lingÃ¼Ã­stico para investigar sylabificaciÃ³n\nÂ© 2015 SIL International
 
 #File Open/Save As dialog
 file.filterdescription=Archivos de Syllable Parser
@@ -47,10 +47,18 @@ onc.view.exceptionlist=ONC Exceptions List
 onc.view.words=ONC Words
 
 #labels
-label.segmentinventory=Inventorio de segementos
-label.segment=Grafemas
-label.orthographicforms=Formas ortografías
-label.comment=Notas
+label.segmentinventory=Inventorio de segmentos
+label.segment=Segmento
+label.orthographicforms=Formas ortografÃ­a
+label.description=DescripciÃ³ní»Š
+label.naturalclasses=Clases Naturales
+label.segmentornaturalclass=Segmento o Clase Naturale
+label.name=Nombre
+label.cancel=Cancelar
+label.help=Ayuda
+label.ok=OK
+label.segmentsandnaturalclasses=Seg. o CN
+label.choosesnc=Seleccionar uno o mÃ¡s segmentos y/o clases naturales
 
 # file loading/saving
 file.error=Error
@@ -61,5 +69,5 @@ file.error.save.content=No se puede guardar data al archivo:\n
 
 # Micellaneous
 misc.niyheader=Lo siento
-misc.niycontent=Todavía no implementado.
+misc.niycontent=TodavÃ­a no implementado.
   
