finish cv natural class ui

--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -17,7 +17,7 @@ menu.about=About
 
 # About dialog
 about.header=Syllable Parser
-about.content=A linguistic program to explore syllabification\n© 2015 SIL International
+about.content=A linguistic program to explore syllabification\nÂ© 2015 SIL International
 
 #File Open/Save As dialog
 file.filterdescription=Syllable Parser files
@@ -67,6 +67,12 @@ file.error.load.content=Could not load data from file:\n
 file.error.save.header=Could not save data
 file.error.save.content=Could not save data to file:\n
 
+# Check Box context menu
+checkbox.context.menu.clearall=Clear All
+checkbox.context.menu.selectall=Select All
+checkbox.context.menu.toggle=Toggle
+
 # Micellaneous
 misc.niyheader=Sorry
 misc.niycontent=Not implemented yet.
+
