--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -9,7 +9,7 @@ menu.exit=Quitar
 menu.edit=Editar
 menu.remove=Remover
 menu.insert=Insertar
-menu.insertnew=Nueva Ã­tem
+menu.insertnew=Nueva Ítem
 menu.view=Vista
 menu.changeinterfacelanguage=Cambiar lengua del Interfaz
 menu.help=Ayuda
@@ -17,7 +17,7 @@ menu.about=A cerca
 
 # About dialog
 about.header=EL programa Syllable Parser
-about.content=Un programa lingÃ¼Ã­stico para investigar sylabificaciÃ³n\nÂ© 2015 SIL International
+about.content=Un programa lingüístico para investigar sylabificación\n© 2015 SIL International
 
 #File Open/Save As dialog
 file.filterdescription=Archivos de Syllable Parser
@@ -49,8 +49,8 @@ onc.view.words=ONC Words
 #labels
 label.segmentinventory=Inventorio de segmentos
 label.segment=Segmento
-label.orthographicforms=Formas ortografÃ­a
-label.description=DescripciÃ³ní»Š
+label.orthographicforms=Formas ortografía
+label.description=Descripción
 label.naturalclasses=Clases Naturales
 label.segmentornaturalclass=Segmento o Clase Naturale
 label.name=Nombre
@@ -58,7 +58,7 @@ label.cancel=Cancelar
 label.help=Ayuda
 label.ok=OK
 label.segmentsandnaturalclasses=Seg. o CN
-label.choosesnc=Seleccionar uno o mÃ¡s segmentos y/o clases naturales
+label.choosesnc=Seleccionar uno o más segmentos y/o clases naturales
 
 # file loading/saving
 file.error=Error
@@ -67,7 +67,12 @@ file.error.load.content=No se puede obtenir data del archivo:\n
 file.error.save.header=No se puede guardar data
 file.error.save.content=No se puede guardar data al archivo:\n
 
+# Check Box context menu
+checkbox.context.menu.clearall=Remover Todos
+checkbox.context.menu.selectall=Seleccionnar Todos
+checkbox.context.menu.toggle=Cambiar
+
 # Micellaneous
 misc.niyheader=Lo siento
-misc.niycontent=TodavÃ­a no implementado.
+misc.niycontent=Todavía no implementado.
   
