first pass at CV natural classes and syllable patterns

--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -53,11 +53,13 @@ label.orthographicforms=Graphemes
 label.description=Description
 label.naturalclasses=Natural Classes
 label.segmentornaturalclass=Segment or Natural Class
+label.syllablepatterns=Syllable Patterns
 label.name=Name
 label.cancel=Cancel
 label.help=Help
 label.ok=OK
 label.segmentsandnaturalclasses=Seg. or NC
+label.choosenc=Choose one or more natural classes
 label.choosesnc=Choose one or more segments and/or natural classes
 
 # file loading/saving
