--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -53,6 +53,7 @@ label.orthographicforms=Formas ortografía
 label.description=Descripción
 label.naturalclasses=Clases Naturales
 label.segmentornaturalclass=Segmento o Clase Naturale
+label.syllablepatterns=Modelo de Sílabas
 label.name=Nombre
 label.cancel=Cancelar
 label.help=Ayuda
