first pass at adding cv words to UI

--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -61,6 +61,10 @@ label.ok=OK
 label.segmentsandnaturalclasses=Seg. or NC
 label.choosenc=Choose one or more natural classes
 label.choosesnc=Choose one or more segments and/or natural classes
+label.word=Word
+label.words=Words
+label.predictedhyphenation=Predicted Syllable Breaks
+label.correcthyphenation=Correct Syllable Breaks
 
 # file loading/saving
 file.error=Error
