--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -60,6 +60,10 @@ label.help=Ayuda
 label.ok=OK
 label.segmentsandnaturalclasses=Seg. o CN
 label.choosesnc=Seleccionar uno o más segmentos y/o clases naturales
+label.word=Palabra
+label.words=Palabras
+label.predictedhyphenation=Silabificacion Prevista
+label.correcthyphenation=Silabificacion Correcta
 
 # file loading/saving
 file.error=Error
