change hyphenation to syllabification

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -62,8 +62,8 @@ label.segmentsandnaturalclasses=Seg. o CN
 label.choosesnc=Seleccionar uno o más segmentos y/o clases naturales
 label.word=Palabra
 label.words=Palabras
-label.predictedhyphenation=Silabificacion Prevista
-label.correcthyphenation=Silabificacion Correcta
+label.predictedsyllabification=Silabificación Predicada
+label.correctsyllabification=Silabificación Correcta
 
 # file loading/saving
 file.error=Error
