Fix-up toolbar; add syllabify command, pass 1

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -7,9 +7,10 @@ menu.save=Guardar
 menu.saveas=Guardar Como...
 menu.exit=Quitar
 menu.edit=Editar
-menu.remove=Remover
-menu.insert=Insertar
 menu.insertnew=Nueva Ítem
+menu.remove=Remover Ítem
+menu.Tools=Herramientas
+menu.syllabifywords=Silabificar Palabras
 menu.view=Vista
 menu.changeinterfacelanguage=Cambiar lengua del Interfaz
 menu.help=Ayuda
