first pass at importing words

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -5,6 +5,7 @@ menu.new=Nuevo
 menu.open=Abrir...
 menu.save=Guardar
 menu.saveas=Guardar Como...
+menu.importwords=Importar Palabras
 menu.exit=Quitar
 menu.edit=Editar
 menu.insertnew=Nueva Ítem
