--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -5,6 +5,7 @@ menu.new=New
 menu.open=Open...
 menu.save=Save
 menu.saveas=Save As...
+menu.importwords=Import Words
 menu.exit=Exit
 menu.edit=Edit
 menu.insertnew=New item
