First pass at exporting hyphenated word list

--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -6,6 +6,7 @@ menu.open=Open...
 menu.save=Save
 menu.saveas=Save As...
 menu.importwords=Import Words
+menu.exporthyphenatedwords=Export Hyphenated Words
 menu.exit=Exit
 menu.edit=Edit
 menu.insertnew=New item
