--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -6,6 +6,7 @@ menu.open=Abrir...
 menu.save=Guardar
 menu.saveas=Guardar Como...
 menu.importwords=Importar Palabras
+menu.exporthyphenatedwords=Exportar Palabras con Guiones
 menu.exit=Quitar
 menu.edit=Editar
 menu.insertnew=Nueva Ítem
