First pass at adding tool tips for toolbar items

--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -9,6 +9,9 @@ menu.importwords=Import Words
 menu.exporthyphenatedwords=Export Hyphenated Words
 menu.exit=Exit
 menu.edit=Edit
+menu.cut=Cut
+menu.copy=Copy
+menu.paste=Paste
 menu.insertnew=New item
 menu.remove=Remove item
 menu.tools=Tools
