First pass at adding CV exceptions to UI

--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -71,6 +71,7 @@ label.word=Word
 label.words=Words
 label.predictedsyllabification=Predicted Syllable Breaks
 label.correctsyllabification=Correct Syllable Breaks
+label.discussion=Discussion
 
 # file loading/saving
 file.error=Error
