--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -9,6 +9,9 @@ menu.importwords=Importar Palabras
 menu.exporthyphenatedwords=Exportar Palabras con Guiones
 menu.exit=Quitar
 menu.edit=Editar
+menu.cut=Cortar
+menu.copy=Copiar
+menu.paste=Pegar
 menu.insertnew=Nueva Ítem
 menu.remove=Remover Ítem
 menu.Tools=Herramientas
@@ -67,6 +70,7 @@ label.word=Palabra
 label.words=Palabras
 label.predictedsyllabification=Silabificación Predicada
 label.correctsyllabification=Silabificación Correcta
+label.discussion=Discussión
 
 # file loading/saving
 file.error=Error
