First pass at adding overview help document

--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -20,6 +20,7 @@ menu.view=View
 menu.changeinterfacelanguage=Change the interface language
 menu.help=Help
 menu.about=About
+menu.helpintro=Introduction to syllabification
 
 # About dialog
 about.header=Syllable Parser
@@ -34,7 +35,7 @@ dialog.chooselanguage=Choose language:
  
 #Approaches
 approach.cv=CV Pattern
-apporach.sonorityhierarchy=Sonority Hierarchy
+approach.sonorityhierarchy=Sonority Hierarchy
 approach.onc=Onset-Nucleus-Coda
 approach.moraic=Moraic
 approach.nuclearprojection=Nuclear Projection
