--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -20,6 +20,7 @@ menu.view=Vista
 menu.changeinterfacelanguage=Cambiar lengua del Interfaz
 menu.help=Ayuda
 menu.about=A cerca
+menu.helpintro=Introducción a la silabificación
 
 # About dialog
 about.header=EL programa Syllable Parser
@@ -34,7 +35,7 @@ dialog.chooselanguage=Selecionar lengua:
  
 #Approaches
 approach.cv=CV Pattern
-apporach.sonorityhierarchy=Sonority Hierarchy
+approach.sonorityhierarchy=Sonority Hierarchy
 approach.onc=Onset-Nucleus-Coda
 approach.moraic=Moraic
 approach.nuclearprojection=Nuclear Projection
