Change name to Asheninka

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -14,7 +14,7 @@ menu.copy=Copiar
 menu.paste=Pegar
 menu.insertnew=Nueva Ítem
 menu.remove=Remover Ítem
-menu.Tools=Herramientas
+menu.tools=Herramientas
 menu.syllabifywords=Silabificar Palabras
 menu.view=Vista
 menu.changeinterfacelanguage=Cambiar lengua del Interfaz
@@ -23,7 +23,7 @@ menu.about=A cerca
 menu.helpintro=Introducción a la silabificación
 
 # About dialog
-about.header=EL programa Syllable Parser
+about.header=Asheninka
 about.content=Un programa lingüístico para investigar sylabificación\n© 2015 SIL International
 
 #File Open/Save As dialog
