--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -23,8 +23,8 @@ menu.about=About
 menu.helpintro=Introduction to syllabification
 
 # About dialog
-about.header=Syllable Parser
-about.content=A linguistic program to explore syllabification\nÂ© 2015 SIL International
+about.header=Asheninka
+about.content=A linguistic program to explore syllabification\n© 2015 SIL International
 
 #File Open/Save As dialog
 file.filterdescription=Syllable Parser files
