[SYLP-24] use \uabcd for non-A-z characters

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -12,19 +12,19 @@ menu.edit=Editar
 menu.cut=Cortar
 menu.copy=Copiar
 menu.paste=Pegar
-menu.insertnew=Nueva Ítem
-menu.remove=Remover Ítem
+menu.insertnew=Nueva \u00cdtem
+menu.remove=Remover \u00cdtem
 menu.tools=Herramientas
 menu.syllabifywords=Silabificar Palabras
 menu.view=Vista
 menu.changeinterfacelanguage=Cambiar lengua del Interfaz
 menu.help=Ayuda
 menu.about=A cerca
-menu.helpintro=Introducción a la silabificación
+menu.helpintro=Introducci\u00f3n a la silabificaci\u00f3n
 
 # About dialog
 about.header=Asheninka
-about.content=Un programa lingüístico para investigar sylabificación\n© 2015 SIL International
+about.content=Un programa ling\u00fc\u00edstico para investigar sylabificaci\u00f3n\n\u00a9 2015 SIL International
 
 #File Open/Save As dialog
 file.filterdescription=Archivos de Syllable Parser
@@ -54,22 +54,22 @@ onc.view.words=ONC Words
 #labels
 label.segmentinventory=Inventorio de segmentos
 label.segment=Segmento
-label.orthographicforms=Formas ortografía
-label.description=Descripción
+label.orthographicforms=Formas ortograf\u00eda
+label.description=Descripci\u00f3n
 label.naturalclasses=Clases Naturales
 label.segmentornaturalclass=Segmento o Clase Naturale
-label.syllablepatterns=Modelo de Sílabas
+label.syllablepatterns=Modelo de S\u00edlabas
 label.name=Nombre
 label.cancel=Cancelar
 label.help=Ayuda
 label.ok=OK
 label.segmentsandnaturalclasses=Seg. o CN
-label.choosesnc=Seleccionar uno o más segmentos y/o clases naturales
+label.choosesnc=Seleccionar uno o m\u00e1s segmentos y/o clases naturales
 label.word=Palabra
 label.words=Palabras
-label.predictedsyllabification=Silabificación Predicada
-label.correctsyllabification=Silabificación Correcta
-label.discussion=Discussión
+label.predictedsyllabification=Silabificaci\u00f3n Predicada
+label.correctsyllabification=Silabificaci\u00f3n Correcta
+label.discussion=Discussi\u00f3n
 
 # file loading/saving
 file.error=Error
@@ -85,5 +85,5 @@ checkbox.context.menu.toggle=Cambiar
 
 # Micellaneous
 misc.niyheader=Lo siento
-misc.niycontent=Todavía no implementado.
+misc.niycontent=Todav\u00eda no implementado.
   
