Add missing label in Spanish resource file

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -64,6 +64,7 @@ label.cancel=Cancelar
 label.help=Ayuda
 label.ok=OK
 label.segmentsandnaturalclasses=Seg. o CN
+label.choosenc=Seleccionar uno o m\u00e1s clases naturales
 label.choosesnc=Seleccionar uno o m\u00e1s segmentos y/o clases naturales
 label.word=Palabra
 label.words=Palabras
