--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -45,6 +45,8 @@ approach.ot=Optimality Theory
 cv.view.segmentinventory=CV Segment Inventory
 cv.view.naturalclass=CV Natural Classes
 cv.view.syllablepatterns=CV Syllable Patterns
+cv.view.syllablepatterns.up=Mover Arriba
+cv.view.syllablepatterns.down=Mover Abajo
 cv.view.words=CV Words
  
 onc.view.segmentinventory=ONC Segment Inventory
