Partial pass at improving CV syl pattern chooser

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -47,6 +47,10 @@ cv.view.naturalclass=CV Natural Classes
 cv.view.syllablepatterns=CV Syllable Patterns
 cv.view.syllablepatterns.up=Mover Arriba
 cv.view.syllablepatterns.down=Mover Abajo
+cv.view.syllablepatterns.remove=Remover
+cv.view.syllablepatterns.choosencsequence=Seleccionar una sequenc\u00eda de clases naturales para este patr\u00f3n:
+cv.view.syllablepatterns.ncsequence=La sequenc\u00eda de clases naturales va a aparecerse aqui
+cv.view.syllablepatterns.ncs=Classes naturales
 cv.view.words=CV Words
  
 onc.view.segmentinventory=ONC Segment Inventory
