--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -47,6 +47,10 @@ cv.view.naturalclass=CV Natural Classes
 cv.view.syllablepatterns=CV Syllable Patterns
 cv.view.syllablepatterns.up=Move Up
 cv.view.syllablepatterns.down=Move Down
+cv.view.syllablepatterns.remove=Remove
+cv.view.syllablepatterns.choosencsequence=Choose sequence of natural classes for this pattern:
+cv.view.syllablepatterns.ncsequence=The chosen sequence will appear here.
+cv.view.syllablepatterns.ncs=Natural Classes
 cv.view.words=CV Words
  
 onc.view.segmentinventory=ONC Segment Inventory
