Before trying to use list instead of individual combo boxes in cv syllable pattern chooser

--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -51,6 +51,8 @@ cv.view.syllablepatterns.remove=Remove
 cv.view.syllablepatterns.choosencsequence=Choose sequence of natural classes for this pattern:
 cv.view.syllablepatterns.ncsequence=The chosen sequence will appear here.
 cv.view.syllablepatterns.ncs=Natural Classes
+cv.view.syllablepatterns.remove=Remove
+cv.view.syllablepatterns.wordboundary=Word boundary
 cv.view.words=CV Words
  
 onc.view.segmentinventory=ONC Segment Inventory
