--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -51,6 +51,8 @@ cv.view.syllablepatterns.remove=Remover
 cv.view.syllablepatterns.choosencsequence=Seleccionar una sequenc\u00eda de clases naturales para este patr\u00f3n:
 cv.view.syllablepatterns.ncsequence=La sequenc\u00eda de clases naturales va a aparecerse aqui
 cv.view.syllablepatterns.ncs=Classes naturales
+cv.view.syllablepatterns.remove=Remover
+cv.view.syllablepatterns.wordboundary=L\u00edmite de palabra
 cv.view.words=CV Words
  
 onc.view.segmentinventory=ONC Segment Inventory
