Improve About dialog

--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -23,7 +23,7 @@ menu.about=About
 menu.helpintro=Introduction to syllabification
 
 # About dialog
-about.header=Asheninka
+about.header=About Asheninka
 about.content=A linguistic program to explore syllabification\n© 2015 SIL International
 
 #File Open/Save As dialog
