--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -23,7 +23,7 @@ menu.about=A cerca
 menu.helpintro=Introducci\u00f3n a la silabificaci\u00f3n
 
 # About dialog
-about.header=Asheninka
+about.header=A cerca Asheninka
 about.content=Un programa ling\u00fc\u00edstico para investigar sylabificaci\u00f3n\n\u00a9 2015 SIL International
 
 #File Open/Save As dialog
