Add version number and license info to About dialog

--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -19,12 +19,12 @@ menu.syllabifywords=Syllabify Words
 menu.view=View
 menu.changeinterfacelanguage=Change the interface language
 menu.help=Help
-menu.about=About
+menu.about=About Asheninka
 menu.helpintro=Introduction to syllabification
 
 # About dialog
 about.header=About Asheninka
-about.content=A linguistic program to explore syllabification\n© 2015 SIL International
+about.content=A linguistic program to explore syllabification\n\nVersion: {0}\n\n© 2015 SIL International\nThis software is licensed under the LGPL, version 2.1 or later\n(http://www.gnu.org/licenses/lgpl-2.1.html)
 
 #File Open/Save As dialog
 file.filterdescription=Syllable Parser files
