--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -19,12 +19,12 @@ menu.syllabifywords=Silabificar Palabras
 menu.view=Vista
 menu.changeinterfacelanguage=Cambiar lengua del Interfaz
 menu.help=Ayuda
-menu.about=A cerca
+menu.about=A cerca de Asheninka
 menu.helpintro=Introducci\u00f3n a la silabificaci\u00f3n
 
 # About dialog
 about.header=A cerca Asheninka
-about.content=Un programa ling\u00fc\u00edstico para investigar sylabificaci\u00f3n\n\u00a9 2015 SIL International
+about.content=Un programa ling\u00fc\u00edstico para investigar sylabificaci\u00f3n\n\nVersi\u00f3n: {0}\n\n\n\u00a9 2015 SIL International\nEste software est\u00e1 licenciado bajo la LGPL , versi\u00f3n 2.1 o posterior\n(http://www.gnu.org/licenses/lgpl-2.1.html)
 
 #File Open/Save As dialog
 file.filterdescription=Archivos de Syllable Parser
