SYLP-13 Add a progress bar to status bar for when doing syllabification

--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -79,6 +79,7 @@ label.words=Words
 label.predictedsyllabification=Predicted Syllable Breaks
 label.correctsyllabification=Correct Syllable Breaks
 label.discussion=Discussion
+label.syllabifying=Syllabifying: 
 
 # file loading/saving
 file.error=Error
