--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -79,6 +79,7 @@ label.words=Palabras
 label.predictedsyllabification=Silabificaci\u00f3n Predicada
 label.correctsyllabification=Silabificaci\u00f3n Correcta
 label.discussion=Discussi\u00f3n
+label.syllabifying=Silabificar: 
 
 # file loading/saving
 file.error=Error
