SYLP-19 Add comment field to Word class so we can insert messages about where a parse failed

--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -80,6 +80,12 @@ label.predictedsyllabification=Predicted Syllable Breaks
 label.correctsyllabification=Correct Syllable Breaks
 label.discussion=Discussion
 label.syllabifying=Syllabifying: 
+label.parserresult=Parser Result
+label.untested=Untested
+label.success=Success
+label.cvsegmentfailure=Failure: could not parse into segments
+label.cvnaturalclassfailure=Failure: could not parse into natural classes
+label.cvsyllabificationfailure=Failure: could not parse natural classes into syllables
 
 # file loading/saving
 file.error=Error
