--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -80,6 +80,12 @@ label.predictedsyllabification=Silabificaci\u00f3n Predicada
 label.correctsyllabification=Silabificaci\u00f3n Correcta
 label.discussion=Discussi\u00f3n
 label.syllabifying=Silabificar: 
+label.parserresult=Resultado del analizador
+label.untested=No probado
+label.success=\u00c9xito
+label.cvsegmentfailure=Fracaso: no se pudo analizar en segmentos
+label.cvnaturalclassfailure=Fracaso: no se pudo analizar en clases naturales
+label.cvsyllabificationfailure=Fracaso: no se pudo analizar clases naturales en s\u00edlabas
 
 # file loading/saving
 file.error=Error
