SYLP-11 Add a way to quickly set the correct syllabification from the predicted syllabification: first pass

--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -16,6 +16,7 @@ menu.insertnew=Nueva \u00cdtem
 menu.remove=Remover \u00cdtem
 menu.tools=Herramientas
 menu.syllabifywords=Silabificar Palabras
+menu.convertpredictedtocorrect=Convertir la predicho para corregir silabificaci\u00f3n
 menu.view=Vista
 menu.changeinterfacelanguage=Cambiar lengua del Interfaz
 menu.help=Ayuda
@@ -86,6 +87,7 @@ label.success=\u00c9xito
 label.cvsegmentfailure=Fracaso: no se pudo analizar en segmentos
 label.cvnaturalclassfailure=Fracaso: no se pudo analizar en clases naturales
 label.cvsyllabificationfailure=Fracaso: no se pudo analizar clases naturales en s\u00edlabas
+label.choosepredicted=Elija el que predijo syllabifications convertir corregir silabeo
 
 # file loading/saving
 file.error=Error
