--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -16,6 +16,7 @@ menu.insertnew=New item
 menu.remove=Remove item
 menu.tools=Tools
 menu.syllabifywords=Syllabify Words
+menu.convertpredictedtocorrect=Convert predicted to correct syllabification
 menu.view=View
 menu.changeinterfacelanguage=Change the interface language
 menu.help=Help
@@ -86,6 +87,7 @@ label.success=Success
 label.cvsegmentfailure=Failure: could not parse into segments
 label.cvnaturalclassfailure=Failure: could not parse into natural classes
 label.cvsyllabificationfailure=Failure: could not parse natural classes into syllables
+label.choosepredicted=Choose which predicted syllabifications to convert to correct syllabification
 
 # file loading/saving
 file.error=Error
