disable insert/remove edit menu items; add message for predicted to correct syllabification table if empty

--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -88,6 +88,8 @@ label.cvsegmentfailure=Failure: could not parse into segments
 label.cvnaturalclassfailure=Failure: could not parse into natural classes
 label.cvsyllabificationfailure=Failure: could not parse natural classes into syllables
 label.choosepredicted=Choose which predicted syllabifications to convert to correct syllabification
+# menu.syllabifywords goes at the end of the following message
+label.nopredicted=There are no predicted syllabifications.\nEither there are no words,\nall words failed to syllabify,\nor you need to invoke  
 
 # file loading/saving
 file.error=Error
