--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -88,6 +88,8 @@ label.cvsegmentfailure=Fracaso: no se pudo analizar en segmentos
 label.cvnaturalclassfailure=Fracaso: no se pudo analizar en clases naturales
 label.cvsyllabificationfailure=Fracaso: no se pudo analizar clases naturales en s\u00edlabas
 label.choosepredicted=Elija el que predijo syllabifications convertir corregir silabeo
+# menu.syllabifywords goes at the end of the following message
+label.nopredicted=No hay syllabifications predichos.\nO bien no hay palabras,\ntodas las palabras no lograron silabear,\no usted necesita para invocar 
 
 # file loading/saving
 file.error=Error
