--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -17,6 +17,7 @@ menu.remove=Remove item
 menu.tools=Tools
 menu.syllabifywords=Syllabify Words
 menu.convertpredictedtocorrect=Convert predicted to correct syllabification
+menu.findword=Find Word
 menu.view=View
 menu.changeinterfacelanguage=Change the interface language
 menu.help=Help
