--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -17,6 +17,7 @@ menu.remove=Remover \u00cdtem
 menu.tools=Herramientas
 menu.syllabifywords=Silabificar Palabras
 menu.convertpredictedtocorrect=Convertir la predicho para corregir silabificaci\u00f3n
+menu.findword=Encontrar la palabra
 menu.view=Vista
 menu.changeinterfacelanguage=Cambiar lengua del Interfaz
 menu.help=Ayuda
