Refine find word dialog

--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -1,4 +1,5 @@
 # English internationalization file for Syllable Parser
+program.name=Asheninka
 # menu items
 menu.file=File
 menu.new=New
@@ -91,6 +92,7 @@ label.cvsyllabificationfailure=Failure: could not parse natural classes into syl
 label.choosepredicted=Choose which predicted syllabifications to convert to correct syllabification
 # menu.syllabifywords goes at the end of the following message
 label.nopredicted=There are no predicted syllabifications.\nEither there are no words,\nall words failed to syllabify,\nor you need to invoke  
+label.wordtofind=Word to find: 
 
 # file loading/saving
 file.error=Error
