--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -1,4 +1,5 @@
 # Spanish internationalization file for Syllable Parser
+program.name=Asheninka
 # menu items
 menu.file=Archivo
 menu.new=Nuevo
@@ -91,6 +92,7 @@ label.cvsyllabificationfailure=Fracaso: no se pudo analizar clases naturales en 
 label.choosepredicted=Elija el que predijo syllabifications convertir corregir silabeo
 # menu.syllabifywords goes at the end of the following message
 label.nopredicted=No hay syllabifications predichos.\nO bien no hay palabras,\ntodas las palabras no lograron silabear,\no usted necesita para invocar 
+label.wordtofind=Palabra para buscar: 
 
 # file loading/saving
 file.error=Error
