SYLP-9 Add a way for user to quickly compare predicted versus correct syllabification results

--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -57,6 +57,7 @@ cv.view.syllablepatterns.ncs=Natural Classes
 cv.view.syllablepatterns.remove=Remove
 cv.view.syllablepatterns.wordboundary=Word boundary
 cv.view.words=CV Words
+cv.view.wordspredictedvscorrect=Predicted vs Correct CV Words
  
 onc.view.segmentinventory=ONC Segment Inventory
 onc.view.syllablepatterns=ONC Syllable Patterns
@@ -93,6 +94,9 @@ label.choosepredicted=Choose which predicted syllabifications to convert to corr
 # menu.syllabifywords goes at the end of the following message
 label.nopredicted=There are no predicted syllabifications.\nEither there are no words,\nall words failed to syllabify,\nor you need to invoke  
 label.wordtofind=Word to find: 
+label.wordpredictedvscorrect=Predicted vs. Correct Syllabification
+# menu.syllabifywords goes at the end of the following message
+label.nopredictedvscorrect=There are no differences between predicted and correct syllabifications.\nEither there are no words,\nall words failed to syllabify,\nor you need to invoke  
 
 # file loading/saving
 file.error=Error
