--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -57,6 +57,7 @@ cv.view.syllablepatterns.ncs=Classes naturales
 cv.view.syllablepatterns.remove=Remover
 cv.view.syllablepatterns.wordboundary=L\u00edmite de palabra
 cv.view.words=CV Words
+cv.view.wordspredictedvscorrect=Predicci\u00f3n vs Corregir
  
 onc.view.segmentinventory=ONC Segment Inventory
 onc.view.syllablepatterns=ONC Syllable Patterns
@@ -89,10 +90,13 @@ label.success=\u00c9xito
 label.cvsegmentfailure=Fracaso: no se pudo analizar en segmentos
 label.cvnaturalclassfailure=Fracaso: no se pudo analizar en clases naturales
 label.cvsyllabificationfailure=Fracaso: no se pudo analizar clases naturales en s\u00edlabas
-label.choosepredicted=Elija el que predijo syllabifications convertir corregir silabeo
+label.choosepredicted=Elija el que predijo silabificaci\u00f3nes convertir corregir silabeo
 # menu.syllabifywords goes at the end of the following message
-label.nopredicted=No hay syllabifications predichos.\nO bien no hay palabras,\ntodas las palabras no lograron silabear,\no usted necesita para invocar 
+label.nopredicted=No hay silabificaci\u00f3nes predichos.\nO bien no hay palabras,\ntodas las palabras no lograron silabear,\no usted necesita para invocar 
 label.wordtofind=Palabra para buscar: 
+label.wordpredictedvscorrect=Predicci\u00f3n vs. silabeo correcta
+# menu.syllabifywords goes at the end of the following message
+label.nopredictedvscorrect=No hay diferencias entre silabificaci\u00f3nes predichos y corregir.\nO bien no hay palabras,\ntodas las palabras no lograron silabear,\no usted necesita para invocar 
 
 # file loading/saving
 file.error=Error
