Add import/export options to file menu (pass one- still need to get methods to work correctly)

--- a/src/sil/org/syllableparser/resources/SyllableParser_en.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_en.properties
@@ -7,7 +7,12 @@ menu.open=Open...
 menu.save=Save
 menu.saveas=Save As...
 menu.importwords=Import Words
+menu.importplainwordlist=Import text file with one word per line
+menu.importparatextwordlist=Import word list exported from ParaTExt
 menu.exporthyphenatedwords=Export Hyphenated Words
+menu.exporthyphenatedwordsforindesign=Export for InDesign (simple list)
+menu.exporthyphenatedwordsforparatext=Export for ParaTExt (hyphenatedWords.txt)
+menu.exporthyphenatedwordsforxlingpaper=Export for XLingPaper (hyphenations exception file)
 menu.exit=Exit
 menu.edit=Edit
 menu.cut=Cut
