--- a/src/sil/org/syllableparser/resources/SyllableParser_es.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser_es.properties
@@ -7,7 +7,12 @@ menu.open=Abrir...
 menu.save=Guardar
 menu.saveas=Guardar Como...
 menu.importwords=Importar Palabras
+menu.importplainwordlist=Importar archivo de texto con una palabra por l\u00ednea
+menu.importparatextwordlist=Importar lista de palabras exportado del programa ParaTExt
 menu.exporthyphenatedwords=Exportar Palabras con Guiones
+menu.exporthyphenatedwordsforindesign=Exportar para InDesign (una lista)
+menu.exporthyphenatedwordsforparatext=Exportar para ParaTExt (hyphenatedWords.txt)
+menu.exporthyphenatedwordsforxlingpaper=Exportar para XLingPaper (hyphenations exception file)
 menu.exit=Quitar
 menu.edit=Editar
 menu.cut=Cortar
